--- a/kooplexhub/hub/templates/container/startopen.html
+++ b/kooplexhub/hub/templates/container/startopen.html
@@ -1,22 +1,16 @@
 {% if container.is_running %}
-    <div class="col-md-1 col-sm-2">
-        <a href="{% url 'container:open' container.id next_page %}" target="_blank">
-          <button role="button" type="button" class="btn btn-success" style="padding: 3px 6px 6px 6px">
-            <span class="glyphicon glyphicon-folder-open" aria-hidden="true"> Open</span>
-          </button>
-        </a>
-    </div>
+<a href="{% url 'container:open' container.id next_page %}" target="_blank">
+  <button role="button" class="btn btn-success">
+    <span class="oi oi-external-link" aria-hidden="true"> Open</span>
+  </button></a>
 {% else %}
-    <div class="col-md-1 col-sm-2">
   {% if container %}
-      <a href="{% url 'container:start' container.id next_page %}">
+<a href="{% url 'container:start' container.id next_page %}">
   {% else %}
-      <a href="{% url 'container:startprojectcontainer' project.id next_page %}">
+<a href="{% url 'container:startprojectcontainer' project.id next_page %}">
   {% endif %}
-        <button role="button" type="button" class="btn btn-default" style="padding: 3px 6px 6px 6px">
-          <span class="glyphicon glyphicon-play" aria-hidden="true"> Start</span>
-        </button>
-      </a>
-    </div>
+  <button type="button" class="btn btn-outline-secondary">
+    <span class="oi oi-flash" aria-hidden="true"> Start</span>
+  </button></a>
 {% endif %}
 
