--- a/kooplexhub/hub/templates/edu/courses.html
+++ b/kooplexhub/hub/templates/edu/courses.html
@@ -6,7 +6,7 @@
   {% for project in user.profile.courseprojects_attended %}
     {% if not project|is_hiddenbyuser:user %}
        <div class="row">
-         {% include 'project/partial.html' with container=project|get_usercontainer:user caller='student' next_page='course:list' %}
+         {% include 'project/partial.html' with container=project|get_usercontainer:user caller='student' next_page='list:courses' %}
        </div>
     {% endif %}
   {% endfor %}
