--- a/kooplexhub/hub/templates/about.html
+++ b/kooplexhub/hub/templates/about.html
@@ -1,36 +1,42 @@
-<div id="about-contacts" class="modal fade modal-dialog" role="dialog" style="position: fixed; top: 0px; ">
-  <div class="modal-content">
+<div class="modal fade" id="about-contacts" tabindex="-1" role="dialog" aria-labelledby="modalAbout" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="longTitleAbout">Kooplex information</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
       <div class="modal-body">
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4>About Kooplex</h4>
-        <ul class="nav nav-tabs">
-          <li class="active"><a href="#pane_about" data-toggle="tab">About</a></li>
-          <li><a href="#pane_contact" data-toggle="tab">Contact</a></li>
+        <ul class="nav nav-tabs" id="myAboutTabs" role="tablist">
+          <li class="nav-item"><a id="about-tab" class="nav-link active" href="#pane_about" data-toggle="tab">About</a></li>
+          <li class="nav-item"><a id="contact-tab" class="nav-link" href="#pane_contact" data-toggle="tab">Contact</a></li>
         </ul>
-        <div class="tab-content">
-          <div id="pane_about" class="tab-pane fade in active">
-              <div class="well">
-            Kooplex is developed by the <strong>Kooplex Team</strong></br><br>
-              <h4>It's purpose is to give easy access to large databases, facilitate collaboration between members and groups and explore effective workflows in research</h4>
-              </div>
+        <div class="tab-content" id="myAboutTabContent">
+          <div id="pane_about" class="tab-pane fade show active" role="tabpanel" aria-labelledby="about-tab">
+            <div class="well">
+              <p>Kooplex is developed by the <strong>Kooplex Team</strong>.</p>
+              <p>It's purpose is to give easy access to large databases, facilitate collaboration between members and groups and explore effective workflows in research</p>
+            </div>
           </div>
-            <div id="pane_contact" class="tab-pane fade">
-                <div class="well">
-                    <ul>
-                        <li>To reach the developers, please send a message to <strong>kooplex at complex.elte.hu</strong>.</li>
-    <li>To report problems or buggy features, please, file an issue at
-                <a href="https://github.com/kooplex/kooplex-hub" target="_blank">https://github.com/kooplex/kooplex-hub</a></li>
-    <li>There is manual at <a href="https://github.com/kooplex/kooplex-hub/wiki" target="_blank">https://github.com/kooplex/kooplex-hub/wiki</a></li>
-                    </ul></div>
+          <div id="pane_contact" class="tab-pane fade" role="tabpanel" aria-labelledby="contact-tab">
+            <div class="well">
+              <ul>
+                <li>To reach the developers, please send a message to <strong>kooplex at complex.elte.hu</strong>.</li>
+                <li>
+                  To report problems or buggy features, please, file an issue at
+                  <a href="https://github.com/kooplex/kooplex-hub" target="_blank">https://github.com/kooplex/kooplex-hub</a>
+                </li>
+                <li>There is manual at <a href="https://github.com/kooplex/kooplex-hub/wiki" target="_blank">https://github.com/kooplex/kooplex-hub/wiki</a></li>
+              </ul>
+            </div>
           </div>
         </div>   <!-- tab-content -->
-      </div>     <!-- modal-body -->
-      <div>
-
-</div>
+      </div>     <!-- model-body -->
       <div class="modal-footer">
-       <button type="button" class="btn btn-default" style="padding: 3px 6px 6px 6px" data-dismiss="modal">
-         <span class="glyphicon glyphicon-arrow-left" aria-hidden="true"/> Back</button>
+        <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
       </div>
-  </div>         <!-- modal-content -->
-</div>           <!-- modal -->
+    </div>
+  </div>
+</div>
+
