--- a/kooplexhub/hub/templates/edu/pane-collect.html
+++ b/kooplexhub/hub/templates/edu/pane-collect.html
@@ -1,18 +1,10 @@
 <form id="assignmentcollect-form-{{ course.id }}" class="form-horizontal" action="{% url 'assignment:collect' %}" method="post">
   {% csrf_token %}
   <input type="hidden" name="course_id" value="{{ course.id }}">
+  {% load render_table from django_tables2 %}
   {% if course.collectableassignments %}
     <div class="alert alert-warning" role="alert">Select assignments to collect right now.</div>
-    <table>
-      <thead>
-        <tr><td>Collect<td>Name<td>Folder<td>Flag
-      </thead>
-      <tbody>
-      {% for a in course.collectableassignments %}
-        <tr><td><input type="checkbox" name="assignmentid" value="{{ a.id }}"><td>{{ a.name }}<td>{{ a.folder }}<td>{{ a.flag }}
-      {% endfor %}
-      </tbody>
-    </table>
+    {% render_table t_collect %}
     <div class="modal-footer">
       <button type="submit" class="btn btn-default" name="button" value="apply"> Collect</button>
     </div>
