--- a/kooplexhub/hub/templates/edu/pane-correct.html
+++ b/kooplexhub/hub/templates/edu/pane-correct.html
@@ -1,12 +1,10 @@
+{% load render_table from django_tables2 %}
 <form id="assignments-correctform-{{ course.id }}" class="form-horizontal" action="{% url 'assignment:correct' %}" method="post">
   {% csrf_token %}
   {% if course|lookup_userassignmentbindings_submitted:user %}
     <div class="alert alert-warning" role="alert">Select user assignments to correct. During correction phase students are prevented from resubmit and update their given assignment.</div>
-
     <input type="hidden" name="course_id" value="{{course.id }}" />
-    {% for b in course|lookup_userassignmentbindings_submitted:user %}
-      <br><input type="checkbox" name="userassignmentbindingid" value="{{ b.id }}"/> {{ b.assignment.flag }} {{ b.assignment.name }} {{ b.user.username }}
-    {% endfor %}
+    {% render_table t_correct %}
     <div class="modal-footer">
       <button type="submit" class="btn btn-default" name="button" value="apply"> Correcting</button>
     </div>
