--- a/kooplexhub/hub/templates/edu/pane-feedback.html
+++ b/kooplexhub/hub/templates/edu/pane-feedback.html
@@ -1,10 +1,9 @@
 <form id="assignments-feedbackform-{{ course.id }}" class="form-horizontal" action="{% url 'assignment:feedback' %}" method="post">
   {% csrf_token %}
+  {% load render_table from django_tables2 %}
   {% if course|lookup_userassignmentbindings_correcting:user %}
     <div class="alert alert-warning" role="alert">Select user assignments you finished correcting.</div>
-    {% for b in course|lookup_userassignmentbindings_correcting:user %}
-      <br><input type="checkbox" name="userassignmentbindingid" value="{{ b.id }}"/> {{ b.assignment.flag }} {{ b.assignment.name }} {{ b.user.username }}
-    {% endfor %}
+    {% render_table t_feedback %}
     <div class="modal-footer">
       <button type="submit" class="btn btn-default" name="button" value="apply"> Feedback</button>
     </div>
