--- a/kooplexhub/hub/templates/edu/pane-massassign.html
+++ b/kooplexhub/hub/templates/edu/pane-massassign.html
@@ -3,30 +3,11 @@
   <input type="hidden" name="course_id" value="{{ course.id }}">
   {% if course.dirs_assignmentcandidate %}
     <div class="alert alert-warning" role="alert">Select a folder and add a name to the new assigment.</div>
-    <label>Name:</label>
-    <input name="name" required/><br>
-    <label>Data folder:</label>
-    <select name="folder">
-      {% for d in course.dirs_assignmentcandidate %}
-        <option value="{{ d }}">{{ d }}</option>
-      {% endfor %}
-    </select><br>
-    <label>Description:</label>
-    <textarea name="description"></textarea><br>
-    <label>Valid from:</label>
-    <input type="text" name="valid_from_0" class="vDateField" size="10" id="valid_from_0" />
-    <input type="text" name="valid_from_1" class="vTimeField" size="8" id="valid_from_1" /><br>
-    <label>Expires at:</label>
-    <input type="text" name="expires_at_0" class="vDateField" size="10" id="expures_at_0" />
-    <input type="text" name="expires_at_1" class="vTimeField" size="8" id="expires_at_1" /><br>
-    <label>Assign for all students:</label>
-    <input type="checkbox" checked name="massassignment" value="True"/><br>
-    <label>Student can submit earlier:</label>
-    <input type="checkbox" checked name="cansubmit" value="True"/><br>
-    <label>Course flags:</label>
-    {% for flag in course|lookup_usercourseflags:user %}
-      <br><input type="checkbox" checked name="flag" value="{{ flag }}"/> {{ flag }} ({{ course|count_students4flag:flag }} students)
-    {% endfor %}
+      <div style="position: relative">
+        <table>
+          {{ f_assignment.as_table }}
+        </table>
+      </div>
     <div class="modal-footer">
       <button type="submit" class="btn btn-default" name="button" value="apply"> Create</button>
     </div>
