--- a/kooplexhub/hub/templates/index.html
+++ b/kooplexhub/hub/templates/index.html
@@ -2,10 +2,10 @@
 
 {% block content %}
 
-<div class="jumbotron" style="padding-top: 10px; padding-bottom: 10px; margin-top: 15px; box-shadow: 5px 10px 8px #888888;">
+<div class="jumbotron" style="box-shadow: 5px 10px 8px #888888; padding: 10px;">
   <div class="row">
     <div class="col-md-6">
-      <img src="/static/content/logo-transparent.png" style="width: 300px;">
+      <img src="/static/content/logo-transparent.png" style="width: 300px;" alt="kooplex">
     </div>
     <div class="col-md-6" style="display: flex; justify-content: center; flex-direction: column; height: 40px; padding-top: 5%;">
       <p class="lead">education platform</p>
@@ -13,62 +13,30 @@
   </div>
 </div>
 
-<div class="jumbotron container-fluid" style="padding-top: 10px; padding-bottom: 10px; background-color: #bdbdbd; box-shadow: 5px 10px 8px #888888;">
-<div class="row">
+<div class="jumbotron" style="padding-top: 10px; padding-bottom: 10px; background-color: #bdbdbd; box-shadow: 5px 10px 8px #888888;">
+  <div class="row">
     <div class="col-md-7">
-    <div style="width: 100%;">
-        <div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
-            <ol class="carousel-indicators">
-              <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-              <li data-target="#myCarousel" data-slide-to="1"></li>
-              <li data-target="#myCarousel" data-slide-to="2"></li>
-            </ol>
-          <!-- Wrapper for slides -->
-            <div class="carousel-inner" style="min-height: 5em;display: flex;">
-              <div class="item active" style="margin:auto; text-align: center;">
-                <img src="/static/content/Tumors_show.gif" alt="Develop and share your jupyter notebook projects">
-              </div>
-
-              <div class="item" style="margin:auto; text-align: center;">
-                <img src="/static/content/Notebook-example.gif" alt="Access digested scientific output, meant for the general public">
-
-              </div>
-
-              <div class="item" style="margin:auto; text-align: center;">
-                <img src="/static/content/Notebook-example.gif" alt="Access private cloud file system, share data and results">
-
-              </div>
-            </div>
-          <!-- Left and right controls -->
-            <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-              <span class="glyphicon glyphicon-chevron-left"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="right carousel-control" href="#myCarousel" data-slide="next">
-              <span class="glyphicon glyphicon-chevron-right"></span>
-              <span class="sr-only">Next</span>
-            </a>
-        </div>
-    </div>
+      <div style="width: 100%;">
+        {% include "slideshow.html" %}
+      </div>
     </div>
 
     <div class="col-md-5" style="text-align: right">
-        <div class="row">Dive into various fields of computational physics, modeling and numerical analysis of data with the help of Jupyter notebooks.
-        </div>
-        <div class="row">Powered by</div>
-        <div class="row">
-         <img src="/static/content/dockerlogo.png" style="height: 40px; padding-right: 10px" alt="docker">
-         <img src="/static/content/django.png" style="height: 40px; padding-right: 10px" alt="django">
-         <img src="/static/content/jupyter.png" style="height: 40px; padding-right: 10px" alt="jupyter">
-         <img src="/static/content/Nginx-Logo.png" style="height: 40px; padding-right: 10px" alt="nginx">
-        </div>
+      <div class="row">
+        Dive into various fields of computational physics, modeling and numerical analysis of data with the help of Jupyter notebooks.
+      </div>
+      <div class="row">Powered by</div>
+      <div class="row">
+       <img src="/static/content/dockerlogo.png" style="height: 40px; padding-right: 10px" alt="docker">
+       <img src="/static/content/django.png" style="height: 40px; padding-right: 10px" alt="django">
+       <img src="/static/content/jupyter.png" style="height: 40px; padding-right: 10px" alt="jupyter">
+       <img src="/static/content/Nginx-Logo.png" style="height: 40px; padding-right: 10px" alt="nginx">
+      </div>
     </div>
-</div>
+  </div>
 </div>
 
 <div class="jumbotron bs-docs-footer" style="font-size: 14px; padding-top: 20px; padding-bottom: 20px; color: #99979c; background-color: #2a2730; box-shadow: 5px 10px 8px #888888;">
-
   <p>Designed and built by <span style="text-decoration: line-through;"> some lazy guys</span> <b>the Kooplex Team</b>. We try to maintain it too! :)</p>
   <ul>
     <li>To reach the developers please send a message to - <strong>kooplex at complex.elte.hu.</strong></li>
