--- a/kooplexhub/hub/templates/layout.html
+++ b/kooplexhub/hub/templates/layout.html
@@ -1,77 +1,36 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html lang="en">
+  <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Kooplex Hub</title>
     {% load staticfiles %}
 
-    <link rel="stylesheet" type="text/css" href="{% static 'content/bootstrap.min.css' %}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'content/site.css' %}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'content/notebook.css' %}" />
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <!-- open iconic -->
+    <link rel="stylesheet" href="{% static 'fonts/open-iconic-master/font/css/open-iconic-bootstrap.css' %}">
 
-<!-- order matters avoid jQuery does not exist exception -->
-<script type="text/javascript" src="/static/admin/js/vendor/jquery/jquery.js"></script>
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    {% block header_extra %}{% endblock %}
 
-<!-- FIXME: maybe not all of it is required USE static //-->
-<link rel="stylesheet" type="text/css" href="/static/admin/css/forms.css" />
+  </head>
 
-
-<!--script type="text/javascript" src="/admin/jsi18n/"></script-->
-<script type="text/javascript" src="/static/scripts/jsi18n"></script>
-<script type="text/javascript" src="/static/admin/js/core.js"></script>
-<script type="text/javascript" src="/static/admin/js/jquery.init.js"></script>
-<script type="text/javascript" src="/static/admin/js/admin/RelatedObjectLookups.js"></script>
-<script type="text/javascript" src="/static/admin/js/actions.js"></script>
-<script type="text/javascript" src="/static/admin/js/urlify.js"></script>
-<script type="text/javascript" src="/static/admin/js/prepopulate.js"></script>                                                                        
-<script type="text/javascript" src="/static/admin/js/vendor/xregexp/xregexp.js"></script>
-<script type="text/javascript" src="/static/admin/js/calendar.js"></script>
-<script type="text/javascript" src="/static/admin/js/admin/DateTimeShortcuts.js"></script>
-<!-- END OF FIXME //-->
-
-</head>
-
-<body>
-  {% include 'navbar.html' %}
+  <body>
+    {% include 'navbar.html' %}
+    {% include 'message.html' %}
     <div class="container body-content">
-    {% if messages %}
-      {% include 'message.html' %}
-    {% endif %}
-    {% include 'about.html' %}
-    {% if user.is_authenticated %}
-      {% include 'bio.html' %}
-      {% include 'project/manage.html' %}
-    {% endif %}
-
-    {% block content %}{% endblock %}
-        <hr/>
-        <footer>
-            <p>&copy; 2018 - Kooplex Hub</p>
-        </footer>
+      {% block content %}{% endblock %}
     </div>
+    <hr/>
+    <footer>
+      <p>&copy; 2018 - Kooplex Hub</p>
+    </footer>
 
-    <script src="{% static 'scripts/jquery-1.10.2.js' %}"></script>
-    <script src="{% static 'scripts/bootstrap.js' %}"></script>
-    <script src="{% static 'scripts/respond.js' %}"></script>
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    {% block scripts %}{% endblock %}
 
-    <script>
-$(document).ready(function(){
-    $('[data-toggle="popover"]').popover();
-});
-    </script>
-    <script>
-$(document).ready(function(){
-    $('[data-toggle="tooltip"]').tooltip();
-});
-</script>
-{% block scripts %}{% endblock %}
-
-</body>
+  </body>
 </html>
