--- a/kooplexhub/hub/templates/navbar.html
+++ b/kooplexhub/hub/templates/navbar.html
@@ -1,22 +1,38 @@
-<div class="navbar navbar-inverse navbar-fixed-top">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a href="{% url 'indexpage' %}" class="navbar-brand"><img src="/static/content/logo_mono.png" style="height: 30px" alt="Kooplex Hub"></a>
-    </div>
-    <ul class="nav navbar-nav">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark"> <!-- fixme style fixed-top makes part of pane disapperar -->
+  <a href="{% url 'indexpage' %}" class="navbar-brand"><img src="/static/content/logo_mono.png" style="height: 30px" alt="Kooplex Hub"></a>
+
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <!-- FIXME: no active item indicated: li class="nav-item active" -->
     {% if user.is_authenticated %}
-     {% if user.profile.is_student %}
-      <li><a href="{% url 'course:list' %}" role="button" type="button" data-toggle="tooltip" title="Access notebook environments related to those courses you attend this semester" data-placement="bottom">Courses</a></li>
-     {% endif %}
-     {% if user.profile.is_teacher %}
-      <li><a href="{% url 'teaching:list' %}" role="button" type="button" data-toggle="tooltip" title="Access notebook environments related to those courses you teach this semester" data-placement="bottom">Teaching</a></li>
-     {% endif %}
-     {% if user.profile.can_createproject %}
-      <li><a href="{% url 'project:mine' %}" role="button" type="button" data-toggle="tooltip" title="Manage your jupyter notebook projects" data-placement="bottom">Projects</a></li>
-     {% endif %}
+      <li class="nav-item">
+       {% if user.profile.is_student %}
+        <a href="{% url 'list:courses' %}" class="nav-link" data-toggle="tooltip" title="Access notebook environments related to those courses you attend this semester" data-placement="bottom">Courses</a>
+       {% else %}
+        <a href="#" class="nav-link disabled">Courses</a>
+       {% endif %}
+      </li>
+      <li class="nav-item">
+       {% if user.profile.is_teacher %}
+        <a href="{% url 'list:teaching' %}" class="nav-link" data-toggle="tooltip" title="Access notebook environments related to those courses you teach this semester" data-placement="bottom">Teaching</a>
+       {% else %}
+        <a href="#" class="nav-link disabled">Teaching</a>
+       {% endif %}
+      </li>
+      <li class="nav-tem">
+       {% if user.profile.can_createproject %}
+        <a href="{% url 'project:mine' %}" class="nav-link" data-toggle="tooltip" title="Manage your jupyter notebook projects" data-placement="bottom">Projects</a>
+       {% else %}
+        <a href="#" class="nav-link disabled">Projects</a>
+       {% endif %}
+      </li>
     {% endif %}
     </ul>
-    {% include 'dropdownmenu.html' %}
-  </div>     <!-- container-fluid -->
-</div>       <!-- navbar -->
+    {% include "navbarmenu_right.html" %}
+  </div>
+</nav>
 
