--- a/kooplexhub/hub/templates/project/manage.html
+++ b/kooplexhub/hub/templates/project/manage.html
@@ -1,53 +1,51 @@
-<div id="manage-projects" class="modal fade modal-dialog" role="dialog" style="position: fixed; top: 0px; ">
-  <div class="modal-content">
-    <form id="project-manage" class="form-horizontal" action="{% url 'project:manage' %}" method="post">
-      {% csrf_token %}
-      <div class="modal-body">
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4>Manage your projects</h4>
-        <ul class="nav nav-tabs">
-{% if user.profile.is_teacher %}
-          <li class="active"><a href="#pane_course" data-toggle="tab">Teaching</a></li>
-{% endif %}
-{% if user.profile.can_createproject %}
-  {% if user.profile.is_teacher %}
-          <li><a href="#pane_project" data-toggle="tab">Projects</a></li>
-  {% else %}
-          <li class="active"><a href="#pane_project" data-toggle="tab">Projects</a></li>
-  {% endif %}
-{% endif %}
-        </ul>
-        <div class="tab-content">
-{% if user.profile.is_teacher %}
-          <div id="pane_course" class="tab-pane fade in active">
-            <table>
-              <thead><tr><td>Course<td>Hide</tr></thead>
-              <tbody>
-            {% for project in user.profile.courseprojects_taught %}
-                <tr>
-                  <td>{{ project.name }}
-                  <td><input type="checkbox" name="hide_courseprojects" value={{ project.id }} {% if project|is_hiddenbyuser:user %}checked{% endif %}>
-                </tr>
-            {% endfor %}
-              </tbody>
-            </table>
-          </div>
-{% endif %}
-{% if user.profile.can_createproject %}
-  {% if user.profile.is_teacher %}
-          <div id="pane_project" class="tab-pane fade">
-  {% else %}
-          <div id="pane_project" class="tab-pane fade in active">
-  {% endif %}
-            <div class="alert alert-error" role="alert">I am implementing it</div>
-          </div>
-{% endif %}
-        </div>   <!-- tab-content -->
-      </div>     <!-- modal-body -->
-      <div class="modal-footer">
-        <button type="submit" class="btn btn-default" name="button" value="apply"> Apply settings</button>
-        <button class="btn btn-default" data-dismiss="modal">Cancel</button>
+{% extends "layout.html" %}
+{% load render_table from django_tables2 %}
+
+{% block content %}
+<div class="row">
+  <form id="project-manage" class="form-horizontal" action="{% url 'project:manage' %}" method="post">
+    {% csrf_token %}
+    <h4>Manage your projects' visibility</h4>
+    <ul class="nav nav-tabs" id="myProjectTabs" role="tablist">
+      <li class="nav-item">
+      {% if user.profile.is_teacher %}
+        <a id="course-tab" class="nav-link active" href="#pane_course" data-toggle="tab">Teaching</a>
+      {% else %}
+        <a id="course-tab" class="nav-link disabled" href="#">Teaching</a>
+      {% endif %}
+      </li>
+      <li class="nav-item">
+      {% if user.profile.can_createproject %}
+       {% if user.profile.is_teacher %}
+        <a id="project-tab" class="nav-link" href="#pane_project" data-toggle="tab">Projects</a>
+       {% else %}
+        <a id="project-tab" class="nav-link active" href="#pane_project" data-toggle="tab">Projects</a>
+       {% endif %}
+      {% else %}
+        <a id="project-tab" class="nav-link disabled" href="#">Projects</a>
+      {% endif %}
+      </li>
+    </ul>
+    <div class="tab-content" id="myHideTabContent">
+    {% if user.profile.is_teacher %}
+      <div id="pane_course" class="tab-pane fade show active" role="tabpanel" aria-labelledby="course-tab">
+        {% render_table t_course %}
       </div>
-    </form>
-  </div>         <!-- modal-content -->
-</div>           <!-- modal -->
+    {% endif %}
+    {% if user.profile.can_createproject %}
+     {% if user.profile.is_teacher %}
+      <div id="pane_project" class="tab-pane fade show active" role="tabpanel" aria-labelledby="project-tab">
+     {% else %}
+      <div id="pane_project" class="tab-pane fade" role="tabpanel" aria-labelledby="project-tab">
+     {% endif %}
+       {% render_table t_project %}
+      </div>
+    {% endif %}
+    </div>   <!-- tab-content -->
+        <div class="modal-footer">
+          <button type="submit" class="btn btn-default" name="button" value="apply"> Apply settings</button>
+          <button class="btn btn-default" data-dismiss="modal">Cancel</button>
+        </div>
+  </form>
+</div> <!-- container -->
+{% endblock %}
