--- a/kooplexhub/hub/templates/project/pane-description.html
+++ b/kooplexhub/hub/templates/project/pane-description.html
@@ -1,16 +1,4 @@
 
-<label for="course_description">Describe the course</label><br>
-<textarea rows="6" cols="50" id="course_description" name="course_description">{{ project.description }}</textarea>
-
-<br>
-<br>
-<div class="panel panel-success">
-  <div class="panel-heading">  
-    <a data-toggle="collapse"  href="#collapse-help-nd" style="text-decoration: none; color: gray">
-      <span class="glyphicon  glyphicon-question-sign"></span> Help <span
-      class="glyphicon glyphicon-option-horizontal"></span>
-    </a>
-  </div>
-
-</div>
+<label for="description">Describe the course</label><br>
+<textarea rows="6" cols="50" id="description" name="description">{{ project.description }}</textarea>
 
