--- a/kooplexhub/hub/templates/project/partial.html
+++ b/kooplexhub/hub/templates/project/partial.html
@@ -1,68 +1,63 @@
-{% comment %}
-{% load custom_tags %}
-{% endcomment %}
-
-{% if caller == 'teacher' %}
-  {% include 'project/settings.html' with enable_image=1 enable_modulevolume=1 enable_storagevolume=1 %}
-{% endif %}
 {% if caller == 'student' %}
   {% include 'edu/assignment_submission.html' %}
 {% endif %}
 
 {% if container.is_running  %}
-<div class="panel panel-success" style="margin-bottom: 3px">
+<div class="card bg-basic mb-3 text-white">
 {% else %}
-<div class="panel panel-default" style="margin-bottom: 3px">
+<div class="card bg-light mb-3">
 {% endif %}
-  <div class="panel-heading" style="padding: 5px 5px;">
-    <div class="row">
-        {% include 'container/startopen.html' %}
-        <a data-toggle="collapse"  href="#collapse{{ project.id }}" style="text-decoration: none; color: gray">
-        <div class="col-md-11 col-sm-10" style="padding: 0px 30px 0px 30px;">
-          {% include 'container/containerstatus.html' %}
-          <strong>{{ project.name }}</strong>
-          <div style="float: right;">
-            <span class="badge"> Using image:<strong>{{ project.image }}</strong></span>
-            {% include 'container/stopremove.html' %}
-            </div>
-        </div>
-      </a>
-    </div>
+  <div class="card-header" id="heading-{{ project.id }}">
+    {% include 'container/startopen.html' %}
+    <button class="btn btn-outline-dark" data-toggle="collapse" data-target="#collapse-{{ project.id }}" aria-expanded="true" aria-controls="collapse-{{ project.id }}">
+      {% include 'container/containerstatus.html' %}
+      <strong>{{ project.name }}</strong>
+    </button>
+    {% include 'container/stopremove.html' %}
+    <button class="btn" data-toggle="collapse" data-target="#collapse-{{ project.id }}" aria-expanded="true" aria-controls="collapse-{{ project.id }}" style="float: right;">
+{% if container.is_running  %}
+      <span class="badge badge-pill badge-success">Using image:<strong>{{ project.image }}</strong></span>
+{% else %}
+      <span class="badge badge-pill badge-secondary">Using image:<strong>{{ project.image }}</strong></span>
+{% endif %}
+    </button>
   </div>
 
-  <div id="collapse{{ project.id }}" class="panel-collapse collapse">
-    <div class="panel-body">
-      <strong>Description: </strong>{{ project.description }}<br>
+    <div id="collapse-{{ project.id }}" class="collapse" aria-labelledby="heading-{{ project.id }}" data-parent="#projectList">
+      <div class="card-body">
+        <strong>Description: </strong>{{ project.description }}<br>
 {% if caller == 'teacher' or caller == 'student' %}
-      <strong>Flag: </strong>
+        <strong>Flag: </strong>
       {% for flag in project.course|lookup_usercourseflags:user %} {{ flag }}, {% endfor %}
 {% endif %}
       {% if caller == 'teacher' or caller == 'projectowner' %}
-      <div style="float: right;">
+        <div style="float: right;">
         {% if caller == 'teacher' %}
-        <a href="{% url 'teaching:assignment' project.course.id %}">
-          <button role="button" type="button" class="btn btn-info" data-toggle="tooltip" title="You can create and manage assignments related to course {{ project.name }}." data-placement="top">
-            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-          </button></a>
+          <a href="{% url 'assignment:manager' project.course.id %}">
+            <button type="button" class="btn btn-secondary" data-toggle="tooltip" title="You can create and manage assignments related to course {{ project.name }}." data-placement="top">
+              <span class="oi oi-pencil" aria-hidden="true"></span>
+            </button></a>
         {% endif %} {% comment %} TODO: in else branch we can add reporting button {% endcomment %}
-        <a href="#" data-toggle="modal" data-target="#project-settings-{{ project.id  }}">
-          <button role="button" type="button" class="btn btn-info" data-toggle="tooltip" title="Settings of project {{ project.name }}. You can change the image, modify volume attachments." data-placement="top">
-            <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>
-          </button></a>
-        <a href="{% url 'project:hide' project.id %}">
-          <button role="button" type="button" class="btn btn-info" data-toggle="tooltip" title="You can hide {{ project.name }} from your list. The related container will be stopped and removed." data-placement="top">
-            <span class="glyphicon glyphicon-eye-close" aria-hidden="true"></span>
-          </button></a>
-      </div>  <!-- float //-->
+          <!-- a href="#" data-toggle="modal" data-target="#project-settings-{{ project.id  }}" -->
+          <a href="{% url 'project:configure' project.id  %}">
+            <button type="button" class="btn btn-secondary" data-toggle="tooltip" title="Settings of project {{ project.name }}. You can change the image, modify volume attachments." data-placement="top">
+              <span class="oi oi-wrench" aria-hidden="true"></span>
+            </button></a>
+          <a href="{% url 'project:hide' project.id %}">
+            <button type="button" class="btn btn-secondary" data-toggle="tooltip" title="You can hide {{ project.name }} from your list. The related container will be stopped and removed." data-placement="top">
+              <span class="oi oi-eye" aria-hidden="true"></span>
+            </button></a>
+        </div>  <!-- float //-->
       {% endif %}
       {% if caller == 'student' %} <!-- FIXME: only when active assignments are there -->
-      <div style="float: right;">
-        <a href="#" data-toggle="modal" data-target="#assignments-submit-{{ project.id  }}">
-          <button role="button" type="button" class="btn btn-info" data-toggle="tooltip" title="You can upload your assignments related to course {{ project.name }}." data-placement="top">
-            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-          </button></a>
-      </div>  <!-- float //-->
+        <div style="float: right;">
+          <a href="#" data-toggle="modal" data-target="#assignments-submit-{{ project.id  }}">
+            <button type="button" class="btn btn-secondary" data-toggle="tooltip" title="You can upload your assignments related to course {{ project.name }}." data-placement="top">
+              <span class="oi oi-pencil" aria-hidden="true"></span>
+            </button></a>
+        </div>  <!-- float //-->
       {% endif %}
-    </div>    <!-- panel-body //-->
-  </div>      <!-- collapse //-->
-</div>        <!-- panel //-->
+      </div>   <!-- card-body -->
+    </div>
+  </div>
+
