--- a/kooplexhub/hub/templates/project/settings.html
+++ b/kooplexhub/hub/templates/project/settings.html
@@ -1,43 +1,44 @@
-<div id="project-settings-{{ project.id }}" class="modal fade modal-dialog" role="dialog" style="position: fixed; top: 0px; ">
-  <div class="modal-content">
-    <form id="project-settings-form-{{ project.id }}" class="form-horizontal" action="{% url 'project:settings' %}" method="post">
-      {% csrf_token %}
-      <input type="hidden" name="project_id" value="{{ project.id }}">
-      <div class="modal-body">
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4>Settings of project <span style="font-weight: bold">{{ project.name }}</span></h4>
-        <ul class="nav nav-tabs">
-          <li class="active"><a href="#pane_description-{{ project.id }}" data-toggle="tab">Description</a></li>
-{% if project.owner == user %}
-          <li><a href="#pane_collaboration-{{ project.id }}" data-toggle="tab">Collaboration</a></li>
-{% endif %}
-{% if enable_image or project.owner == user %}
-          <li><a href="#pane_image-{{ project.id }}" data-toggle="tab">Image</a></li>
-{% endif %}
-{% if enable_modulevolume or project.owner == user %}
-          <li><a href="#pane_funvolume-{{ project.id }}" data-toggle="tab">Module volumes</a></li>
-{% endif %}
-{% if enable_storagevolume or project.owner == user %}
-          <li><a href="#pane_stgvolume-{{ project.id }}" data-toggle="tab">Storage volumes</a></li>
-{% endif %}
-{% if show_scope %}
-          <li><a href="#pane_scope-{{ project.id }}" data-toggle="tab">Scope</a></li>
-{% endif %}
-{% if show_deletion %}
-          <li><a href="#pane_deletion-{{ project.id }}" data-toggle="tab">Deletion</a></li>
-{% endif %}
-        </ul>
-        <div class="tab-content">
-          <div id="pane_description-{{ project.id }}" class="tab-pane fade in active">
-            {% include 'project/pane-description.html' %}
-          </div>
-{% if project.owner == user %}
-          <div id="pane_collaboration-{{ project.id }}" class="tab-pane fade">
-            {% if project.owner == user %}
-            {% include 'project/pane-collaboration.html' %}
-            {% else %}
-            <div class="alert alert-warning" role="alert">You can only view the collaborators.</div>
-             <table class="table table-striped">
+{% extends "layout.html" %}
+{% load render_table from django_tables2 %}
+
+{% block content %}
+
+<form id="projectSettingsForm" class="form-horizontal" action="{% url 'project:configure' project.id %}" method="post">
+  {% csrf_token %}
+  <h5 class="modal-title">Configure project {{ project.name }}</h5>
+  <ul class="nav nav-tabs" role="tablist">
+    <li class="nav-item"><a class="nav-link active" href="#pane_description-{{ project.id }}" data-toggle="tab">Description</a></li>
+    {% if project.owner == user %}
+    <li class="nav-item"><a class="nav-link" href="#pane_collaboration-{{ project.id }}" data-toggle="tab">Collaboration</a></li>
+    {% endif %}
+    {% if enable_image or project.owner == user %}
+    <li class="nav-item"><a class="nav-link" href="#pane_image-{{ project.id }}" data-toggle="tab">Image</a></li>
+    {% endif %}
+    {% if enable_modulevolume or project.owner == user %}
+    <li class="nav-item"><a class="nav-link" href="#pane_funvolume-{{ project.id }}" data-toggle="tab">Module volumes</a></li>
+    {% endif %}
+    {% if enable_storagevolume or project.owner == user %}
+    <li class="nav-item"><a class="nav-link" href="#pane_stgvolume-{{ project.id }}" data-toggle="tab">Storage volumes</a></li>
+    {% endif %}
+    {% if show_scope %}
+    <li class="nav-item"><a class="nav-link" href="#pane_scope-{{ project.id }}" data-toggle="tab">Scope</a></li>
+    {% endif %}
+    {% if show_deletion %}
+    <li class="nav-item"><a class="nav-link" href="#pane_deletion-{{ project.id }}" data-toggle="tab">Deletion</a></li>
+    {% endif %}
+  </ul>
+  <div class="tab-content">
+    <div id="pane_description-{{ project.id }}" class="tab-pane fade show active">
+      {% include 'project/pane-description.html' %}
+    </div>
+   {% if project.owner == user %}
+    <div id="pane_collaboration-{{ project.id }}" class="tab-pane fade">
+      {% if project.owner == user %}
+        {% include 'project/pane-collaboration.html' %}
+      {% else %}
+      <div class="alert alert-warning" role="alert">You can only view the collaborators.</div>
+<!-- FIXME: render_table -->          
+   <table class="table table-striped">
              <thead><tr><th scope="col">Name</th>  <th scope="col">Short Bio</th>  <th scope="col">Position</th></tr></thead>
              <tbody>
                 <tr> <td><div data-toggle="tooltip" title="Username: {{ project.owner.displayname }}"  data-placement="right" data-html="true">
@@ -50,52 +51,52 @@
                {% endfor %}
                </tbody>
                </table>
-            {% endif %}
-          </div>
-{% endif %}
-{% if enable_image or project.owner == user %}
-          <div id="pane_image-{{ project.id }}" class="tab-pane fade">
-            {% include 'project/pane-image.html' %}
-          </div>
-{% endif %}
-{% if enable_modulevolume or project.owner == user %}
-          <div id="pane_funvolume-{{ project.id }}" class="tab-pane fade">
-            {% include 'project/pane-functionalvolume.html' %}
-          </div>
-{% endif %}
-{% if enable_storagevolume or project.owner == user %}
-          <div id="pane_stgvolume-{{ project.id }}" class="tab-pane fade">
-            {% include 'project/pane-storagevolume.html' %}
-          </div>
-{% endif %}
-{% if show_deletion %}
-          <div id="pane_scope-{{ project.id }}" class="tab-pane fade">
-            {% if project.owner == user %}
-            {% include 'project/pane-scope.html' %}
-            {% else %}
-            <div class="alert alert-warning" role="alert">Only the project owner {{ project.owner.displayname }} ({{ project.owner.username }}) can modify the scope.</div>
-            {% endif %}
-          </div>
-{% endif %}
-{% if show_deletion %}
-          <div id="pane_deletion-{{ project.id }}" class="tab-pane fade">
-            {% if project.owner == user %}
-            <div class="alert alert-danger" role="alert">All unshared data related to this project are lost by the deletion.</div>
-            <p>Are you are sure about it?</p>
-            <button type="submit" class="btn btn-danger" name="button" value="delete"> Really delete</button>
-            {% else %}
-            <div class="alert alert-danger" role="alert">All unshared data related to this project are lost by quitting collaboration.</div>
-            <p>Are you are sure about it?</p>
-            <button type="submit" class="btn btn-danger" name="button" value="quit"> Really quit</button>
-            {% endif %}
-          </div>
-{% endif %}
-        </div>   <!-- tab-content -->
-      </div>     <!-- modal-body -->
-      <div class="modal-footer">
-        <button type="submit" class="btn btn-default" name="button" value="apply"> Apply settings</button>
-        <button class="btn btn-default" data-dismiss="modal">Cancel</button>
+      {% endif %}
+    </div>
+   {% endif %}
+   {% if enable_image or project.owner == user %}
+    <div id="pane_image-{{ project.id }}" class="tab-pane fade">
+      {% include 'project/pane-image.html' %}
+    </div>
+   {% endif %}
+   {% if enable_modulevolume or project.owner == user %}
+    <div id="pane_funvolume-{{ project.id }}" class="tab-pane fade">
+      {% render_table t_volumes_fun %}
+    </div>
+   {% endif %}
+   {% if enable_storagevolume or project.owner == user %}
+    <div id="pane_stgvolume-{{ project.id }}" class="tab-pane fade">
+      {% render_table t_volumes_stg %}
+    </div>
+   {% endif %}
+   {% if show_deletion %}
+    <div id="pane_scope-{{ project.id }}" class="tab-pane fade">
+    {% if project.owner == user %}
+      {% include 'project/pane-scope.html' %}
+    {% else %}
+      <div class="alert alert-warning" role="alert">
+        Only the project owner {{ project.owner.displayname }} ({{ project.owner.username }}) can modify the scope.
       </div>
-    </form>
-  </div>         <!-- modal-content -->
-</div>           <!-- modal -->
+    {% endif %}
+    </div>
+   {% endif %}
+   {% if show_deletion %}
+    <div id="pane_deletion-{{ project.id }}" class="tab-pane fade">
+      {% if project.owner == user %}
+        <div class="alert alert-danger" role="alert">All unshared data related to this project are lost by the deletion.</div>
+        <p>Are you are sure about it?</p>
+        <button type="submit" class="btn btn-danger" name="button" value="delete"> Really delete</button>
+      {% else %}
+        <div class="alert alert-danger" role="alert">All unshared data related to this project are lost by quitting collaboration.</div>
+        <p>Are you are sure about it?</p>
+        <button type="submit" class="btn btn-danger" name="button" value="quit"> Really quit</button>
+      {% endif %}
+    </div>
+   {% endif %}
+  </div>   <!-- tab-content -->
+  <div class="modal-footer">
+    <button type="submit" class="btn btn-default" name="button" value="apply"> Apply settings</button>
+    <button class="btn btn-default" data-dismiss="modal">Cancel</button>
+  </div>
+</form>
+{% endblock %}
