pass through HTML validator

--- a/kooplexhub/hub/templates/about.html
+++ b/kooplexhub/hub/templates/about.html
@@ -1,8 +1,8 @@
-<div class="modal fade" id="about-contacts" tabindex="-1" role="dialog" aria-labelledby="modalAbout" aria-hidden="true">
+<div class="modal fade" id="about-contacts" tabindex="-1" role="dialog" aria-labelledby="titleAbout" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="longTitleAbout">Kooplex information</h5>
+        <h5 class="modal-title" id="titleAbout">Kooplex information</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
