--- a/kooplexhub/hub/templates/container/startopen.html
+++ b/kooplexhub/hub/templates/container/startopen.html
@@ -1,16 +1,14 @@
 {% if container.is_running %}
-<a href="{% url 'container:open' container.id next_page %}" target="_blank">
-  <button role="button" class="btn btn-success">
-    <span class="oi oi-external-link" aria-hidden="true"> Open</span>
-  </button></a>
+<a href="{% url 'container:open' container.id next_page %}" target="_blank" role="button" class="btn btn-success" style="min-width: 6em; text-align: left;">
+  <span class="oi oi-external-link" aria-hidden="true"> Open</span></a>
 {% else %}
+<a
   {% if container %}
-<a href="{% url 'container:start' container.id next_page %}">
+  href="{% url 'container:start' container.id next_page %}"
   {% else %}
-<a href="{% url 'container:startprojectcontainer' project.id next_page %}">
+  href="{% url 'container:startprojectcontainer' project.id next_page %}"
   {% endif %}
-  <button type="button" class="btn btn-outline-secondary">
-    <span class="oi oi-flash" aria-hidden="true"> Start</span>
-  </button></a>
+  role="button" class="btn btn-outline-secondary" style="min-width: 6em; text-align: left;">
+    <span class="oi oi-flash" aria-hidden="true"> Start</span></a>
 {% endif %}
 
