--- a/kooplexhub/hub/templates/edu/assignments.html
+++ b/kooplexhub/hub/templates/edu/assignments.html
@@ -45,7 +45,7 @@
 {% block scripts %}
 <script src="https://momentjs.com/downloads/moment.js"></script>
 <script src="{% static 'scripts/bootstrap-datetimepicker.min.js' %}"></script>
-<script type="text/javascript">
+<script>
     $('.datetimepicker').datetimepicker();
 </script>
 {% endblock %}
