--- a/kooplexhub/hub/templates/edu/teaching.html
+++ b/kooplexhub/hub/templates/edu/teaching.html
@@ -4,7 +4,7 @@
 
   {% for project in user.profile.courseprojects_taught %}
     {% if not project|is_hiddenbyuser:user %}
-         {% include 'project/partial.html' with container=project|get_usercontainer:user caller='teacher' next_page='teaching:list' %}
+         {% include 'project/partial.html' with container=project|get_usercontainer:user caller='teacher' next_page='list:teaching' %}
     {% endif %}
   {% endfor %}
 
