--- a/kooplexhub/hub/templates/edu/pane-collect.html
+++ b/kooplexhub/hub/templates/edu/pane-collect.html
@@ -3,12 +3,12 @@
   <input type="hidden" name="course_id" value="{{ course.id }}">
   {% load render_table from django_tables2 %}
   {% if course.collectableassignments %}
-    <div class="alert alert-warning" role="alert">Select assignments to collect right now.</div>
+    <div class="alert alert-warning">Select assignments to collect right now.</div>
     {% render_table t_collect %}
     <div class="modal-footer">
       <button type="submit" class="btn btn-default" name="button" value="apply"> Collect</button>
     </div>
   {% else %}
-    <div class="alert alert-warning" role="warning">There are no candidate assignments to collect yet.</div>
+    <div class="alert alert-warning">There are no candidate assignments to collect yet.</div>
   {% endif %}
 </form>
