--- a/kooplexhub/hub/templates/edu/pane-feedback.html
+++ b/kooplexhub/hub/templates/edu/pane-feedback.html
@@ -2,12 +2,12 @@
   {% csrf_token %}
   {% load render_table from django_tables2 %}
   {% if course|lookup_userassignmentbindings_correcting:user %}
-    <div class="alert alert-warning" role="alert">Select user assignments you finished correcting.</div>
+    <div class="alert alert-warning">Select user assignments you finished correcting.</div>
     {% render_table t_feedback %}
     <div class="modal-footer">
       <button type="submit" class="btn btn-default" name="button" value="apply"> Feedback</button>
     </div>
   {% else %}
-    <div class="alert alert-warning" role="warning">There are no assignments being corrected.</div>
+    <div class="alert alert-warning">There are no assignments being corrected.</div>
   {% endif %}
 </form>
