--- a/kooplexhub/hub/templates/edu/pane-massassign.html
+++ b/kooplexhub/hub/templates/edu/pane-massassign.html
@@ -2,7 +2,7 @@
   {% csrf_token %}
   <input type="hidden" name="course_id" value="{{ course.id }}">
   {% if course.dirs_assignmentcandidate %}
-    <div class="alert alert-warning" role="alert">Select a folder and add a name to the new assigment.</div>
+    <div class="alert alert-warning">Select a folder and add a name to the new assigment.</div>
       <div style="position: relative">
         <table>
           {{ f_assignment.as_table }}
@@ -12,6 +12,6 @@
       <button type="submit" class="btn btn-default" name="button" value="apply"> Create</button>
     </div>
   {% else %}
-    <div class="alert alert-warning" role="warn">There are no candidate subfolders in <code>~/share/private</code> directory. Please create one and place all files into it to be part of a new assignment.</div>
+    <div class="alert alert-warning">There are no candidate subfolders in <code>~/share/private</code> directory. Please create one and place all files into it to be part of a new assignment.</div>
   {% endif %}
 </form>
