--- a/kooplexhub/hub/templates/project/partial.html
+++ b/kooplexhub/hub/templates/project/partial.html
@@ -1,7 +1,3 @@
-{% if caller == 'student' %}
-  {% include 'edu/assignment_submission.html' %}
-{% endif %}
-
 {% if container.is_running  %}
 <div class="card bg-basic mb-3 text-white">
 {% else %}
@@ -45,7 +41,7 @@
       {% endif %}
       {% if caller == 'student' %} <!-- FIXME: only when active assignments are there -->
         <div style="float: right;">
-          <a href="#" data-toggle="modal" data-target="#assignments-submit-{{ project.id  }}" role="button" class="btn btn-secondary" data-toggle="tooltip" title="You can upload your assignments related to course {{ project.name }}." data-placement="top">
+          <a href="#" data-toggle="modal" data-target="#assignments-submit" role="button" class="btn btn-secondary">
             <span class="oi oi-pencil" aria-hidden="true"></span></a>
         </div>  <!-- float //-->
       {% endif %}
