minor changes to what columns to show/hide fix typos refactor course.bindableassignments

--- a/kooplexhub/hub/templates/edu/pane-collect.html
+++ b/kooplexhub/hub/templates/edu/pane-collect.html
@@ -10,7 +10,7 @@
     <div class="alert alert-warning">There are no mass assignment candidates to collect yet.</div>
   {% endif %}
 
-    <h5>Petrsonal assignments</h5>
+    <h5>Personal assignments</h5>
   {% if t_collect_personal.data|length > 0 %}
     {% render_table t_collect_personal %}
   {% else %}
