--- a/kooplexhub/hub/templates/edu/pane-bind.html
+++ b/kooplexhub/hub/templates/edu/pane-bind.html
@@ -2,7 +2,7 @@
   {% csrf_token %}
   <input type="hidden" name="course_id" value="{{ course.id }}">
   {% load render_table from django_tables2 %}
-  {% if course.bindableassignments %}
+  {% if t_bind.data|length > 0 %}
     <div class="alert alert-warning">Select assignment and student to bind right now.</div>
       <div style="position: relative">
         {% render_table t_bind %}
@@ -11,6 +11,6 @@
       <button type="submit" class="btn btn-default" name="button" value="apply"> Bind</button>
     </div>
   {% else %}
-    <div class="alert alert-warning">There are no candidate assignments to bind yet.</div>
+    <div class="alert alert-warning">There are no assignment candidates to bind yet.</div>
   {% endif %}
 </form>
