--- a/kooplexhub/hub/templates/edu/pane-correct.html
+++ b/kooplexhub/hub/templates/edu/pane-correct.html
@@ -1,14 +1,14 @@
 {% load render_table from django_tables2 %}
 <form id="assignments-correctform-{{ course.id }}" class="form-horizontal" action="{% url 'assignment:correct' %}" method="post">
   {% csrf_token %}
-  {% if course|lookup_userassignmentbindings_submitted:user %}
-    <div class="alert alert-warning">Select user assignments to correct. During correction phase students are prevented from resubmit and update their given assignment.</div>
+  {% if t_correct.data|length > 0 %}
+    <div class="alert alert-warning">Select user assignments to correct. During correction phase students are prevented from resubmiting and updating their given assignment.</div>
     <input type="hidden" name="course_id" value="{{course.id }}" />
     {% render_table t_correct %}
     <div class="modal-footer">
       <button type="submit" class="btn btn-default" name="button" value="apply"> Correcting</button>
     </div>
   {% else %}
-    <div class="alert alert-warning">There are no assignments you can collect.</div>
+    <div class="alert alert-warning">There are no assignments you can correct.</div>
   {% endif %}
 </form>
