model:  scor, feedback_text added and admin shows ui:  correct/feedback table merged into one  instead of checkbox radio button selects functionality func:  all teachers of the same course can feedback/correct the same time (at least on the form) FIXME: implement mount for the containers!!!! url namespace:  reflects the changes (correct removed, feedback kept)

--- a/kooplexhub/hub/templates/edu/pane-feedback.html
+++ b/kooplexhub/hub/templates/edu/pane-feedback.html
@@ -1,7 +1,7 @@
 <form id="assignments-feedbackform-{{ course.id }}" class="form-horizontal" action="{% url 'assignment:feedback' %}" method="post">
   {% csrf_token %}
   {% load render_table from django_tables2 %}
-  {% if course|lookup_userassignmentbindings_correcting:user %}
+  {% if course.lookup_userassignmentbindings %}
     <div class="alert alert-warning">Select user assignments you finished correcting.</div>
     {% render_table t_feedback %}
     <div class="modal-footer">
