--- a/kooplexhub/hub/templates/index.html
+++ b/kooplexhub/hub/templates/index.html
@@ -17,7 +17,10 @@
   <div class="row">
     <div class="col-md-7">
       <div style="width: 100%;">
-        {% include "slideshow.html" %}
+        {% comment %} {% include "slideshow.html" %} {% endcomment %}
+        <img class="d-block w-100" src="/static/content/Kooplex-frontpage.png" alt="Access private cloud file system, share data and results">
+
+
       </div>
     </div>
 
@@ -37,9 +40,8 @@
 </div>
 
 <div class="jumbotron bs-docs-footer" style="font-size: 14px; padding-top: 20px; padding-bottom: 20px; color: #99979c; background-color: #2a2730; box-shadow: 5px 10px 8px #888888;">
-  <p>Designed and built by <span style="text-decoration: line-through;"> some lazy guys</span> <b>the Kooplex Team</b>. We try to maintain it too! :)</p>
+  <p><span style="color: #f57a7a;">"The sooner you call for help, the sooner it arrives!"</span> - <a href="mailto:kooplex@complex.elte.hu"><strong>kooplex at complex.elte.hu.</strong></a></p>
   <ul>
-    <li>To reach the developers please send a message to - <strong>kooplex at complex.elte.hu.</strong></li>
     <li>To report problems or buggy features please file an issue at - <a href="https://github.com/kooplex/kooplex-hub" target="_blank" style="color: #99979c"><strong>https://github.com/kooplex/kooplex-hub</strong></a></li>
     <li>To check the manual please visit - <a href="https://github.com/kooplex/kooplex-hub/wiki" target="_blank" style="color: #99979c"><strong>https://github.com/kooplex/kooplex-hub/wiki</strong></a></li>
   </ul>
