--- a/kooplexhub/hub/templates/slideshow.html
+++ b/kooplexhub/hub/templates/slideshow.html
@@ -2,22 +2,12 @@
   <!-- Indicators -->
   <ol class="carousel-indicators">
     <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#myCarousel" data-slide-to="1"></li>
-    <li data-target="#myCarousel" data-slide-to="2"></li>
   </ol>
   <!-- Wrapper for slides -->
   <div class="carousel-inner" style="min-height: 5em;display: flex;">
-    <div class="carourel-item active" style="margin:auto; text-align: center;">
-      <img class="d-block w-100" src="/static/content/Tumors_show.gif" alt="Develop and share your jupyter notebook projects">
-    </div>
 
     <div class="carousel-item" style="margin:auto; text-align: center;">
-      <img class="d-block w-100" src="/static/content/Notebook-example.gif" alt="Access digested scientific output, meant for the general public">
-
-    </div>
-
-    <div class="carousel-item" style="margin:auto; text-align: center;">
-      <img class="d-block w-100" src="/static/content/Notebook-example.gif" alt="Access private cloud file system, share data and results">
+      <img class="d-block w-100" src="/static/content/Kooplex-frontpage.png" alt="Access private cloud file system, share data and results">
 
     </div>
   </div>
