--- a/kooplexhub/hub/templates/edu/pane-collect.html
+++ b/kooplexhub/hub/templates/edu/pane-collect.html
@@ -1,9 +1,10 @@
-<form id="assignmentcollect-form-{{ course.id }}" class="form-horizontal" action="{% url 'assignment:collect' %}" method="post">
+<form id="assignmentcollect-form-{{ course.id }}" class="form-horizontal" action="{% url 'assignment:collect' course.id %}" method="post">
   {% csrf_token %}
   <input type="hidden" name="course_id" value="{{ course.id }}">
   {% load render_table from django_tables2 %}
     <div class="alert alert-warning">Select assignments to collect right now.</div>
     <h5>Mass assignments</h5>
+    <input type="hidden" name="pager" value="{{ pager }}"> <!-- FIXME: two tables share the same pager -->
   {% if t_collect_mass.data|length > 0 %}
     {% render_table t_collect_mass %}
   {% else %}
